<resources>
    <string name="app_name">StudentHub</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login"> Log In</string>
    <string name="dont_have_account">Don’t have an account?</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="signup"> Sign Up</string>
    <string name="already_have_account">Already have account?</string>
</resources>