<?xml version="1.0" encoding="utf-8"?>
<!--
🔹 fragment_login.xml

This layout file defines the Login screen for user authentication.
Each UI component is connected to the Fragment and ViewModel for handling logic.

Components:
1. Username input field → inside TextInputLayout
2. Password input field → with toggle icon
3. Login button → triggers login action
4. ProgressBar → shown during login process
5. Signup link → navigates to Signup screen
-->
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="40dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivAvatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/outline_account_circle_24"
        android:scaleType="centerCrop"
        android:background="@drawable/bg_circle"
        android:layout_marginTop="70dp"
        android:layout_gravity="center_horizontal">

    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Sign In"
        android:layout_marginTop="4dp"
        android:textSize="30sp"
        android:textStyle="bold">
    </TextView>


    <!-- Username input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginTop="20dp"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/text_input_stroke"
        app:boxStrokeWidth="2dp"
        app:shapeAppearanceOverlay="@style/RoundedCornerTextField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        android:layout_marginTop="16dp"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/text_input_stroke"
        app:boxStrokeWidth="2dp"
        app:shapeAppearanceOverlay="@style/RoundedCornerTextField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Login button -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="110dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAllCaps="false"
        android:background="@drawable/bg_gradient_button"
        android:textColor="@color/white"
        android:layout_marginTop="24dp"/>

    <!-- ProgressBar -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        tools:ignore="MissingConstraints"/>

    <FrameLayout
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal">

    <!-- Signup link -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/dont_have_account"
        android:background="@drawable/bg_selector"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tvGoToSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginStart="4dp"
        android:textColor="#6300FA"
        android:layout_gravity="center_horizontal"
        android:text="@string/signup"
        android:background="@drawable/bg_selector"
        android:textStyle="normal" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </FrameLayout>
</androidx.appcompat.widget.LinearLayoutCompat>

